--- a/package.json
+++ b/package.json
@@ -4,10 +4,12 @@
   "private": true,
   "homepage": "https://easy957.github.io/react-homework-phonebook-localStorage/",
   "dependencies": {
+    "@ant-design/icons": "^4.7.0",
     "@reduxjs/toolkit": "^1.7.2",
     "@testing-library/jest-dom": "^5.16.1",
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
+    "antd": "^4.18.8",
     "axios": "^0.26.0",
     "nanoid": "^3.2.0",
     "react": "^17.0.2",
